@startuml
entity Benutzer
{
    * **ID <<PK>>**
    * Nachname
    * Vorname
    * Firma
    * Art
}

entity Bank
{
    * **ID <<PK>>**
    * Bezeichnung
    * BIC
}

entity Kontoinhaber
{
    * **ID <<PK>>**
    * **BenutzerID <<FK>>**
    * **BankverbindungID <<FK>>**
}

entity Bankverbindung
{
    * **ID <<PK>>**
    * IBAN
    * **BankID <<FK>>**
}

entity Umsatz
{
    * **ID <<PK>>**
    * Datum
    * Betrag
    * Verwendungszweck
    * **BankverbindungAuftraggeberID <<FK>>**
    * **BankverbindungZahlungsbeteiligterID <<FK>>**
}

entity Buchung
{
    * **ID <<PK>>**
    * **UmsatzID <<FK>>**
    * **KategorieID <<FK>>**
    * **VertragID [optional] <<FK>>**
}

entity Kategorie
{
    * **ID <<PK>>**
    * Bezeichnung
}

entity Vertrag
{
    * **ID <<PK>>**
    * Bezeichnung
}

Benutzer ||--o{ Kontoinhaber
Bankverbindung ||--o{ Kontoinhaber
Bank ||--o{ Bankverbindung
Bankverbindung }o--o{ Umsatz
Kategorie ||--o{ Buchung
Umsatz ||--|| Buchung
Vertrag ||--o{ Buchung
@enduml
